"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2009-10-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-37:
	  hacknet: honor name overrides of pass-gate macros
		Test cases added.


2009-10-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-36:
	  hacknet: added option prefer_port_aliases to override the 
		default shortest canonical name with port alias names,
		if applicable.  Documented, added few test cases.
		Default is off, use old canonical short names.


	* HACKT-00-01-04-main-00-83-35:
	  hacknet: added -T type option to emit subcircuit library
		of the named type.  Later: propagate to other back-ends, 
		and maybe allow repetition for multiple types.
		Documented and tested.


2009-10-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-34:
	  parser/hackt-parse.yy.in: general attribute now allows
		just "string", whose interpretation in PRS literals
		is an implicit "label" key.  
		AST: check/allow for cases where key is NULL (implicit label).
	  hacknet: use PRS-literal string labels to override
		transistor names in output netlist.
		Test cases added, documented.
	  hflat lvs also preserves the label (untested).


2009-10-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-33:
	  hacknet: transistors are now associated with output nodes
		of the rules from which they came, or internal node 
		definitions.  Pass-gates are associated with drain terminals.
		This now reduces the number of changes to device names
		in the netlist with incremental changes to the prs.  
		This behavior is enabled permanantly.
	  Test cases updated, a few new ones added.


2009-10-02	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-32:
	  No source revision, fixed test/Make.test-guile (LTDL_LIBRARY_PATH)