@@ -3,6 +3,13 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2009-10-14	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-83-37+:
+	  AST/PRS.cc: make comilpation fail earlier when old syntax 
+		is used for PRS-literal Vt overrides.
+
+
 2009-10-08	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-83-37:
